# save-money-trading-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  alembic.ini  next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.perf.config.ts  pyproject.toml  requirements-baseline.txt  vitest.config.ts
.agent-loop/: README.md  apply_mock_result.py  build_review_workspace.py  codex-review-prompt.md  codex-review-schema.json  extract_codex_auth_env.py  minimize_codex_auth.py  run-codex-review.ps1  run-review-loop.ps1  secret_scan.py  validate-review-result.py
.cursor/rules/: 00-mandatory-codex-review.mdc  00-mandatory-quality-gate.mdc  project-governance.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  incident.yml  research-experiment.yml  roadmap-task.yml
.github/workflows/: ci-fast.yml  ci-full.yml  ci.yml  github-governance-setup.yml
deploy/: Dockerfile.dashboard  Dockerfile.paper-python
deploy/railpack/: api.railpack.json  worker.railpack.json
deploy/railway/: paper-trading-api.toml  paper-trading-dashboard.toml  paper-trading-worker.toml
deploy/scripts/: pre-deploy-migrate.sh  start-api.sh  start-worker.sh
docker/: docker-compose.paper-test.yml
docs/: ARCHITECTURE.md  DECISION_LOG.md  DEFINITION_OF_DONE.md  EXPERIMENT_TEMPLATE.md  P2-PR-SPLIT.md  P3-PR-SPLIT.md  P3_DATASET_REPRODUCIBILITY_AUDIT.md  P3_HISTORICAL_DATA_PLAN.md  PROJECT_OPERATING_SYSTEM.md  RISK_REGISTER.md  STRATEGY_LIFECYCLE.md  baseline-paper-v1.md  branch-protection.md  codex-workflow-day1.md  core-engine-audit-v1.md  default-branch-migration-plan.md  design-system.md  github-project-p25-p7-setup.md  hyperliquid-public-adapter-audit-v1.md  hyperliquid-public-adapter-v1.md  market-data-audit-v1.md  market-data-contract.md  paper-trading-e2e-soak-v1.md  paper-trading-lifecycle-integrity.md  paper-trading-orchestrator-v1.md  paper-trading-production-runtime-v1.md  product-specification.md  railway-paper-trading-dashboard-v1.md  risk-specification.md  strategy-specification.md  strategy-v1-parameter-inventory.md
docs/audit/: ACCOUNTING_RECONCILIATION.md  API_UI_DEPLOYMENT_AUDIT.md  ARCHITECTURE_RUNTIME_MAP.md  DATA_AND_STRATEGY_AUDIT.md  EXECUTIVE_AUDIT_SUMMARY.md  FINDINGS_REGISTER.md  REMEDIATION_PLAN.md  RESILIENCE_AUDIT.md  RISK_AND_EXECUTION_AUDIT.md  SECURITY_AUDIT.md  SYSTEM_AUDIT_INVENTORY.md  SYSTEM_CONTRACT_MATRIX.md  TEST_COVERAGE_GAPS.md
docs/ci/: ACTIONS_OPTIMIZATION_STAGE_2.md  ACTIONS_USAGE_BASELINE.md  REQUIRED_CHECK_MIGRATION.md
docs/design/: RESEARCH_WORKSPACE_UI_SPEC.md
docs/governance/: PRIVATE_EDGE_EXTENSION.md  PUBLIC_PRIVATE_BOUNDARY.md  PUBLIC_RELEASE_CHECKLIST.md  PUBLIC_REPO_STRATEGY.md  SECURITY_AUDIT_PUBLIC_RELEASE.md
docs/incidents/: INC-20260714-001-tabletop-duplicate-fill.md  INCIDENT_TEMPLATE.md  README.md
docs/operations/: api-db-instrumentation-overhead.md  cache-policy-evidence.md  dashboard-fastapi-residual-121-baseline.md  dashboard-fastapi-residual-121.md  dashboard-layer-a-browser.json  dashboard-layer-b-ssr.json  metrics.md  (+18 more)
migrations/: env.py
scripts/: audit_dashboard_sql_explain.py  export_requirements_baseline.py  export_research_dataset_hyperliquid.py  generate_dashboard_password_hash.py  generate_research_workspace_ui_reference.py  github_project_setup.py  measure_dashboard_api_baseline.py  measure_dashboard_layer_c_api.py  measure_dashboard_ssr.py  measure_instrumentation_overhead.py  paper-api-stub.mjs  prepare_research_lab_local.py  railway_layer_c_probe.js  reconcile_accounting.py  restore_drill_snapshot.py  run_paper_soak.py  run_railway_layer_c_probe.py  seed_restore_drill_data.py  split-p2-prs.ps1  verify_paper_state.py  verify_pg_schema.py
src/: middleware.ts
tests/: conftest.py  postgres_fixtures.py
(+733 files in other folders)
