[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "save-money-bot"
version = "1.0.0"
description = "SAVE-MONEY BOT Strategy & Risk Engine V1"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["services"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["services"]
python_files = ["test_*.py"]
addopts = "-p no:cacheprovider"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["strategy_engine", "risk_engine", "backtester"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/backtester/**" = ["E501"]
