[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "save-money-bot"
version = "1.0.0"
description = "SAVE-MONEY BOT Strategy & Risk Engine V1"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
]

[tool.setuptools.packages.find]
where = ["services"]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["services"]
python_files = ["test_*.py"]
addopts = "-p no:cacheprovider"
asyncio_mode = "auto"
markers = [
    "live: optional live Hyperliquid network smoke tests",
    "postgres: requires PostgreSQL integration database",
    "soak: long-running deterministic soak tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["strategy_engine", "risk_engine", "backtester", "market_data", "paper_trading", "trading_constraints"]

[[tool.mypy.overrides]]
module = "tests.market_data.hyperliquid.*"
disable_error_code = ["import-untyped"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/backtester/**" = ["E501"]
"tests/paper_trading/**" = ["E501"]
